--- a/packages/starter/example/package.json
+++ b/packages/starter/example/package.json
@@ -34,6 +34,7 @@
         "export": "next export"
     },
     "dependencies": {
+        "@anishde12020/moongate-adapter": "^1.0.0",
         "@ant-design/icons": "^4.8.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
